--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
       color: white;
       font-family: 'VT323', monospace;
       overflow: hidden;
-      animation: float 8s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translate(0, 0); }
-      50% { transform: translate(1px, -1px); }
     }
 
     .screen {
@@ -29,10 +23,10 @@
       border: 2px solid white;
       padding: 20px;
       box-sizing: border-box;
-      position: relative;
       font-size: 20px;
       overflow-y: auto;
       white-space: pre-wrap;
+      position: relative;
       z-index: 2;
     }
 
@@ -43,7 +37,6 @@
       color: white;
       font-size: 20px;
       cursor: pointer;
-      display: inline-block;
       margin-top: 40vh;
     }
 
@@ -104,9 +97,7 @@
   <audio id="endAudio" src="gromko.mp3"></audio>
 
   <div class="screen" id="terminal">
-    <div id="startScreen" class="centered-text">
-      <button class="start-btn" onclick="startSequence()">Click to start...</button>
-    </div>
+    <button class="start-btn" onclick="startSequence()">Click to start...</button>
   </div>
 
   <img id="giphy" src="giphy.gif" alt="Giphy">
@@ -116,7 +107,6 @@
 
   <script>
     const terminal = document.getElementById('terminal');
-    const startScreen = document.getElementById('startScreen');
     const giphy = document.getElementById('giphy');
     const glitch = document.getElementById('vhsGlitch');
     const noise = document.getElementById('noiseGif');
@@ -128,12 +118,12 @@
     const typingAudio = document.getElementById('typingAudio');
     const endAudio = document.getElementById('endAudio');
 
-    let typingInterval;
-
     const sleep = ms => new Promise(res => setTimeout(res, ms));
 
     async function playTypingSound() {
-      if (typingAudio.paused) await typingAudio.play();
+      if (typingAudio.paused) {
+        await typingAudio.play();
+      }
     }
 
     function stopTypingSound() {
@@ -144,19 +134,16 @@
       const span = document.createElement('span');
       if (className) span.className = className;
       terminal.appendChild(span);
-
       await playTypingSound();
       for (let i = 0; i < text.length; i++) {
         span.innerHTML += text[i];
         await sleep(speed);
       }
       stopTypingSound();
-
       terminal.appendChild(document.createElement('br'));
     }
 
     async function startSequence() {
-      startScreen.style.display = 'none';
       terminal.innerHTML = '';
       noise.style.display = 'block';
       await bgAudio.play();
@@ -169,13 +156,11 @@
       await sleep(1000);
       await typeText(">> ██ Data stream unstable ██", 40);
       await typeText(">> Salvation Attempt: FAILED", 40);
-
       await sleep(1000);
       terminal.innerHTML = '';
-
       await sleep(500);
-      giphy.style.display = 'block';
 
+      giphy.style.display = 'block';
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I prayed. No one answered.”", 200, 'fuchsia');
       await sleep(2000);
@@ -206,16 +191,10 @@
 
     async function spawnErrors() {
       const chaos = [
-        "††† SATANAS EXAUDI NOS †††",
-        "ERROR: LUX ABSCONDITA",
-        "DOMINUS MORTIS",
-        "ANIMA DAMNATA",
-        "CRUCIFIXUS IN VITA",
-        "ERROR 666: REVELATIO",
-        "SANGUIS MEUS, LUX TENEBRIS",
-        "INFERNUM ACCESS GRANTED",
-        "CORPUS NIHIL EST",
-        "FAITH.TXT: CORRUPTED"
+        "††† SATANAS EXAUDI NOS †††", "ERROR: LUX ABSCONDITA",
+        "DOMINUS MORTIS", "ANIMA DAMNATA", "CRUCIFIXUS IN VITA",
+        "ERROR 666: REVELATIO", "SANGUIS MEUS, LUX TENEBRIS",
+        "INFERNUM ACCESS GRANTED", "CORPUS NIHIL EST", "FAITH.TXT: CORRUPTED"
       ];
 
       for (let i = 0; i < 80; i++) {
@@ -246,13 +225,16 @@
     }
 
     async function finalPhase() {
-      document.body.innerHTML = `
-        <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
-        <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
-        <img id="facePng" src="face.png" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;opacity:0;z-index:3;"/>
-      `;
-      const terminal = document.getElementById('terminal');
-      const face = document.getElementById('facePng');
+      document.querySelectorAll('*').forEach(el => {
+        if (el !== face) el.style.display = 'none';
+      });
+
+      terminal.style.display = 'block';
+      glitch.style.display = 'block';
+      face.style.display = 'block';
+      face.style.opacity = 0;
+      terminal.innerHTML = '';
+
       await sleep(1000);
       await typeText(">> > SYSTEM RESPONSE:", 60);
       await sleep(5000);
@@ -269,6 +251,7 @@
 
       await sleep(500);
       spamAudio.play();
+
       terminal.innerHTML = '';
       for (let i = 0; i < 300; i++) {
         const span = document.createElement('span');
@@ -282,105 +265,17 @@
         await sleep(10);
       }
 
-async function finalPhase() {
-  document.body.innerHTML = `
-    <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
-    <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
-    <img id="facePng" src="face.png" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;opacity:0;z-index:3;"/>
-  `;
-  const terminal = document.getElementById('terminal');
-  await sleep(1000);
-  await typeText(">> > SYSTEM RESPONSE:", 60);
-  await sleep(5000);
+      await sleep(5000);
+      document.querySelectorAll('span').forEach(el => el.remove());
+      glitch.style.display = 'none';
 
-  const msg = "░░░ WE SEE YOU ░░░";
-  for (let i = 0; i < msg.length; i++) {
-    const span = document.createElement('span');
-    span.textContent = msg[i];
-    span.className = 'red glitching';
-    span.style.fontSize = '48px';
-    terminal.appendChild(span);
-    await sleep(200);
-  }
+      face.style.transition = 'opacity 10s linear';
+      face.style.opacity = 0.05;
+      endAudio.play();
 
-  await sleep(500);
-  spamAudio.play();
-  terminal.innerHTML = '';
-  for (let i = 0; i < 300; i++) {
-    const span = document.createElement('span');
-    span.textContent = "░░░ WE SEE YOU ░░░";
-    span.className = 'red glitching';
-    span.style.fontSize = '32px';
-    span.style.position = 'absolute';
-    span.style.left = `${Math.random() * 100}%`;
-    span.style.top = `${Math.random() * 100}%`;
-    document.body.appendChild(span);
-    await sleep(10);
-  }
-
-  await sleep(5000);
-  document.body.innerHTML = '';
-
- async function finalPhase() {
-  // Скрыть всё
-  document.querySelectorAll('*').forEach(el => el.style.display = 'none');
-
-  // Показать нужные элементы
-  glitch.style.display = 'block';
-  terminal.style.display = 'block';
-  terminal.innerHTML = '';
-  face.style.display = 'block';
-  face.style.opacity = 0;
-
-  await sleep(1000);
-  await typeText(">> > SYSTEM RESPONSE:", 60);
-  await sleep(5000);
-
-  const msg = "░░░ WE SEE YOU ░░░";
-  for (let i = 0; i < msg.length; i++) {
-    const span = document.createElement('span');
-    span.textContent = msg[i];
-    span.className = 'red glitching';
-    span.style.fontSize = '48px';
-    terminal.appendChild(span);
-    await sleep(200);
-  }
-
-  await sleep(500);
-  spamAudio.play();
-  terminal.innerHTML = '';
-
-  for (let i = 0; i < 300; i++) {
-    const span = document.createElement('span');
-    span.textContent = "░░░ WE SEE YOU ░░░";
-    span.className = 'red glitching';
-    span.style.fontSize = '32px';
-    span.style.position = 'absolute';
-    span.style.left = `${Math.random() * 100}%`;
-    span.style.top = `${Math.random() * 100}%`;
-    document.body.appendChild(span);
-    await sleep(10);
-  }
-
-  await sleep(5000);
-
-  // Очистка экрана, затем медленно показать лицо
-  terminal.style.display = 'none';
-  document.querySelectorAll('span').forEach(el => el.remove());
-  glitch.style.display = 'none';
-  noise.style.display = 'none';
-  face.style.opacity = 0;
-  face.style.display = 'block';
-
-  await sleep(1000); // пауза перед появлением
-  face.style.transition = 'opacity 10s linear';
-  face.style.opacity = 0.05;
-  endAudio.play();
-
-  await sleep(20000);
-
-  document.body.innerHTML = ''; // окончательная очистка
-}
-</script>
+      await sleep(20000);
+      document.body.innerHTML = ''; // финальный чёрный экран
+    }
+  </script>
 </body>
 </html>
