--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
       endAudio.play();
 
       await sleep(20000);
-      document.body.innerHTML = ''; // финальный чёрный экран
+      document.body.innerHTML = '';
+      document.body.style.backgroundColor = 'black';
     }
   </script>
 </body>
