--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CONFESSION-LOG_0173</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
   <style>
@@ -13,6 +13,12 @@
       color: white;
       font-family: 'VT323', monospace;
       overflow: hidden;
+      animation: float 8s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translate(0, 0); }
+      50% { transform: translate(1px, -1px); }
     }
 
     .screen {
@@ -23,10 +29,10 @@
       border: 2px solid white;
       padding: 20px;
       box-sizing: border-box;
+      position: relative;
       font-size: 20px;
       overflow-y: auto;
       white-space: pre-wrap;
-      position: relative;
       z-index: 2;
     }
 
@@ -37,12 +43,15 @@
       color: white;
       font-size: 20px;
       cursor: pointer;
+      display: inline-block;
       margin-top: 40vh;
     }
 
     .fuchsia { color: #ed0dd9; }
     .red { color: red; }
-    .glitching { animation: glitch 0.2s infinite; }
+    .glitching {
+      animation: glitch 0.2s infinite;
+    }
 
     @keyframes glitch {
       0% { transform: translate(0, 0); }
@@ -52,7 +61,7 @@
       100% { transform: translate(0, 0); }
     }
 
-    #giphy, #vhsGlitch, #noiseGif, #facePng {
+    #giphy, #vhsGlitch, #noiseGif {
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -66,7 +75,7 @@
       max-width: 400px;
     }
 
-    #vhsGlitch, #noiseGif {
+    #vhsGlitch {
       top: 0;
       left: 0;
       width: 100%;
@@ -75,87 +84,108 @@
       z-index: 0;
     }
 
-    #noiseGif { opacity: 0.08; z-index: 1; }
-
-    #facePng {
+    #noiseGif {
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
+      opacity: 0.08;
+      z-index: 1;
       object-fit: cover;
-      opacity: 0;
-      transition: opacity 10s linear;
-      z-index: 3;
+    }
+
+    audio {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <audio id="bgAudio" src="creepy-bg.mp3" autoplay loop></audio>
-  <audio id="altAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
-  <audio id="spamAudio" src="zvuk2.mp3"></audio>
-  <audio id="typingAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
-  <audio id="endAudio" src="gromko.mp3"></audio>
+  <audio id="bgAudio" src="creepy-bg.mp3" loop></audio>
+  <audio id="errorAudio" src="elektronnyie-pomehi-23588.mp3" loop></audio>
+  <audio id="spamAudio" src="zvuk2.mp3" loop></audio>
+  <audio id="keyboardAudio" src="klaviatura-kompyutera-30453.mp3"></audio>
 
   <div class="screen" id="terminal">
-    <button class="start-btn" onclick="startSequence()">Click to start...</button>
+    <div id="startScreen" class="centered-text">
+      <button class="start-btn" onclick="startSequence()">Click to start...</button>
+    </div>
   </div>
-
   <img id="giphy" src="giphy.gif" alt="Giphy">
   <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch">
   <img id="noiseGif" src="noise.gif" alt="Noise">
-  <img id="facePng" src="face.png" alt="Face">
 
   <script>
     const terminal = document.getElementById('terminal');
+    const startScreen = document.getElementById('startScreen');
     const giphy = document.getElementById('giphy');
     const glitch = document.getElementById('vhsGlitch');
     const noise = document.getElementById('noiseGif');
-    const face = document.getElementById('facePng');
-
     const bgAudio = document.getElementById('bgAudio');
-    const altAudio = document.getElementById('altAudio');
+    const errorAudio = document.getElementById('errorAudio');
     const spamAudio = document.getElementById('spamAudio');
-    const typingAudio = document.getElementById('typingAudio');
-    const endAudio = document.getElementById('endAudio');
+    const keyboardAudio = document.getElementById('keyboardAudio');
+
+    let keyboardOffset = 0;
+    let isTyping = false;
 
     const sleep = ms => new Promise(res => setTimeout(res, ms));
 
-    async function playTypingSound() {
-      if (typingAudio.paused) {
-        await typingAudio.play();
+    async function playKeyboardSound() {
+      if (keyboardAudio.readyState >= 2 && !isTyping) {
+        isTyping = true;
+        keyboardAudio.currentTime = keyboardOffset;
+        keyboardAudio.play();
       }
     }
 
-    function stopTypingSound() {
-      typingAudio.pause();
+    function stopKeyboardSound() {
+      if (isTyping) {
+        keyboardAudio.pause();
+        keyboardOffset = keyboardAudio.currentTime;
+        isTyping = false;
+      }
     }
 
     async function typeText(text, speed = 50, className = '') {
       const span = document.createElement('span');
       if (className) span.className = className;
       terminal.appendChild(span);
-      await playTypingSound();
+      await playKeyboardSound();
       for (let i = 0; i < text.length; i++) {
         span.innerHTML += text[i];
         await sleep(speed);
       }
-      stopTypingSound();
+      stopKeyboardSound();
       terminal.appendChild(document.createElement('br'));
     }
 
+    async function dotsPause() {
+      for (let i = 0; i < 2; i++) {
+        await typeText(".", 1000);
+      }
+      terminal.innerHTML = terminal.innerHTML.slice(0, -4); // удалить две последние точки и <br>
+      await typeText(".", 1000);
+    }
+
     async function startSequence() {
+      startScreen.style.display = 'none';
       terminal.innerHTML = '';
       noise.style.display = 'block';
-      await bgAudio.play();
+
+      try { await bgAudio.play(); } catch(e) {}
 
       await typeText(">> CONFESSION-LOG_0173 :: ACCESS GRANTED", 40);
       await typeText(">> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED", 40);
       await typeText(">>", 40);
       await typeText(">> Parsing soul fragment...", 40);
+      await typeText(">>", 40);
       await typeText(">> [IN LUMEN VERITAS]", 40);
-      await sleep(1000);
+      await dotsPause();
+      await typeText(">>", 40);
       await typeText(">> ██ Data stream unstable ██", 40);
+      await typeText(">>", 40);
       await typeText(">> Salvation Attempt: FAILED", 40);
+
       await sleep(1000);
       terminal.innerHTML = '';
       await sleep(500);
@@ -166,6 +196,7 @@
       await sleep(2000);
       await typeText(">> SUBJECT 0173: ", 40);
       await typeText("“I heard laughter in the static.”", 200, 'fuchsia');
+      await typeText(">>", 40);
       await typeText(">> Faith checksum: NULL", 40);
 
       document.body.addEventListener('click', glitchPhase, { once: true });
@@ -175,12 +206,13 @@
       terminal.innerHTML = '';
       giphy.style.display = 'none';
       noise.style.display = 'none';
-      bgAudio.pause();
-      altAudio.play();
 
       glitch.style.display = 'block';
       await sleep(100);
       glitch.style.display = 'none';
+
+      bgAudio.pause();
+      try { errorAudio.play(); } catch (e) {}
 
       await spawnErrors();
       await sleep(1000);
@@ -191,10 +223,16 @@
 
     async function spawnErrors() {
       const chaos = [
-        "††† SATANAS EXAUDI NOS †††", "ERROR: LUX ABSCONDITA",
-        "DOMINUS MORTIS", "ANIMA DAMNATA", "CRUCIFIXUS IN VITA",
-        "ERROR 666: REVELATIO", "SANGUIS MEUS, LUX TENEBRIS",
-        "INFERNUM ACCESS GRANTED", "CORPUS NIHIL EST", "FAITH.TXT: CORRUPTED"
+        "††† SATANAS EXAUDI NOS †††",
+        "ERROR: LUX ABSCONDITA",
+        "DOMINUS MORTIS",
+        "ANIMA DAMNATA",
+        "CRUCIFIXUS IN VITA",
+        "ERROR 666: REVELATIO",
+        "SANGUIS MEUS, LUX TENEBRIS",
+        "INFERNUM ACCESS GRANTED",
+        "CORPUS NIHIL EST",
+        "FAITH.TXT: CORRUPTED"
       ];
 
       for (let i = 0; i < 80; i++) {
@@ -225,19 +263,28 @@
     }
 
     async function finalPhase() {
-      document.querySelectorAll('*').forEach(el => {
-        if (el !== face) el.style.display = 'none';
-      });
+      errorAudio.pause();
 
-      terminal.style.display = 'block';
-      glitch.style.display = 'block';
-      face.style.display = 'block';
-      face.style.opacity = 0;
-      terminal.innerHTML = '';
+      document.body.innerHTML = `
+        <img id="vhsGlitch" src="vhs-glitch.gif" alt="VHS Glitch" style="position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:0;">
+        <div class="screen" id="terminal" style="position:relative;z-index:2;"></div>
+      `;
+      const terminal = document.getElementById('terminal');
+      const sleep = ms => new Promise(res => setTimeout(res, ms));
+      const type = async (text, speed = 50) => {
+        for (let i = 0; i < text.length; i++) {
+          terminal.innerHTML += text[i];
+          await sleep(speed);
+        }
+        terminal.innerHTML += "<br>";
+      };
 
-      await sleep(1000);
-      await typeText(">> > SYSTEM RESPONSE:", 60);
-      await sleep(5000);
+      await type(">>", 50);
+      await type(">> > SYSTEM RESPONSE:", 60);
+
+      await sleep(7000);
+      const vhs = document.getElementById('vhsGlitch');
+      if (vhs) vhs.style.display = 'none';
 
       const msg = "░░░ WE SEE YOU ░░░";
       for (let i = 0; i < msg.length; i++) {
@@ -249,9 +296,9 @@
         await sleep(200);
       }
 
-      await sleep(500);
-      spamAudio.play();
+      try { spamAudio.play(); } catch (e) {}
 
+      await sleep(5000);
       terminal.innerHTML = '';
       for (let i = 0; i < 300; i++) {
         const span = document.createElement('span');
@@ -265,17 +312,9 @@
         await sleep(10);
       }
 
-      await sleep(5000);
-      document.querySelectorAll('span').forEach(el => el.remove());
-      glitch.style.display = 'none';
-
-      face.style.transition = 'opacity 10s linear';
-      face.style.opacity = 0.05;
-      endAudio.play();
-
-      await sleep(20000);
+      await sleep(2000);
+      spamAudio.pause();
       document.body.innerHTML = '';
-      document.body.style.backgroundColor = 'black';
     }
   </script>
 </body>
